# STR2024

TEMPLATE/: CMakeLists.txt
autoeliminacion/: CMakeLists.txt  autoeliminacion.c
blinking/: CMakeLists.txt  blinking.c
blinking/lib/: FreeRTOS-Kernel
blinking_2leds/: CMakeLists.txt  blinking_2leds.c
blinking_2leds/lib/: FreeRTOS-Kernel
blinking_2leds_dif_frec/: CMakeLists.txt  blinking_2leds_dif_frec.c
cambio_prioridades/: CMakeLists.txt  cambio_prioridades.c
contador_cola/: CMakeLists.txt  FreeRTOSConfig.h  contador_cola.c
elimina_tareas/: CMakeLists.txt  elimina_tareas.c
hola_mundo_usb/: CMakeLists.txt  hola_mundo_usb.c
hola_task/: CMakeLists.txt  hola_task.c
hola_task_periodic/: CMakeLists.txt  hola_task_periodic.c
semaforo_cuenta/: CMakeLists.txt  semaforo_cuenta.c
